Invite token changes
