# structs/requestsDTOs/encryptRequestDTO.go
@@ -1,0 +1,12 @@
+package requestsDTOs
+
+type EncryptInviteRequestDTO struct {
+	Email string
+	Role  string
+}
+
+type DecryptRequestDTO struct {
+	Token string
+	Nonce string
+	Email string
+}
